# farn

./: .buildinfo  .coveragerc  .gitignore  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CHANGELOG_dictIO.html  CHANGELOG_farn.html  CHANGELOG_ospx.html  CITATION.cff  INSTALL.md  LICENSE.html  README.html  README.md  README_dictIO.html  README_farn.html  README_ospx.html  STYLEGUIDE.html  STYLEGUIDE.md  api.html  changelogs.html  cli.__main__.html  cli.batchProcess.html  cli.dictParser.html  cli.dict_parser.html  cli.farn.html  cli.html  cli.importSystemStructure.html  cli.ospCaseBuilder.html  cli.sub.dictIO.html  cli.sub.farn.html  cli.sub.ospx.html  cli.watchCosim.html  dictIO.cppDict.html  dictIO.dictParser.html  dictIO.dictReader.html  dictIO.dictWriter.html  dictIO.formatter.html  dictIO.html  dictIO.parser.html  (+56 more)
.github/workflows/: _build_and_publish_documentation.yml  code_quality.yml  main.yml  pypi.yml  sphinx.yml.disabled  sphinx_combined.yml  tox.yml
_autosummary/: dictIO.cpp_dict.CppDict.html  dictIO.cpp_dict.html  dictIO.dict.SDict.html  dictIO.dict.html  dictIO.dict_parser.DictParser.html  dictIO.dict_parser.html  dictIO.dict_reader.DictReader.html  dictIO.dict_reader.html  dictIO.dict_writer.DictWriter.html  dictIO.dict_writer.html  dictIO.formatter.FoamFormatter.html  dictIO.formatter.Formatter.html  dictIO.formatter.JsonFormatter.html  dictIO.formatter.NativeFormatter.html  dictIO.formatter.XmlFormatter.html  dictIO.formatter.html  dictIO.parser.FoamParser.html  dictIO.parser.JsonParser.html  dictIO.parser.NativeParser.html  dictIO.parser.Parser.html  dictIO.parser.XmlParser.html  dictIO.parser.html  dictIO.types.html  dictIO.utils.counter.BorgCounter.html  dictIO.utils.counter.DejaVue.html  dictIO.utils.counter.Indenter.html  dictIO.utils.counter.html  dictIO.utils.dict.html  dictIO.utils.html  dictIO.utils.logging.html  dictIO.utils.path.html  dictIO.utils.strings.html  farn.batch.batch_processor.html  farn.batch.html  farn.core.case.Case.html  farn.core.case.CaseStatus.html  farn.core.case.Cases.html  farn.core.case.html  farn.core.html  farn.core.parameter.Parameter.html  (+60 more)
_sources/: CHANGELOG_dictIO.md.txt  CHANGELOG_farn.md.txt  CHANGELOG_ospx.md.txt  README_dictIO.md.txt  README_farn.md.txt  README_ospx.md.txt  cli.sub.dictIO.rst.txt  cli.sub.farn.rst.txt  cli.sub.ospx.rst.txt  farn.rst.txt  fileFormat.sub.dictIO.rst.txt  fileFormat.sub.farn.rst.txt  index.rst.txt
_sources/_autosummary/: farn.batch.batch_processor.AsyncBatchProcessor.rst.txt  farn.batch.batch_processor.rst.txt  farn.core.case.Case.rst.txt  farn.farn.rst.txt  farn.run.cli.batchProcess.rst.txt  farn.run.cli.rst.txt  farn.run.rst.txt  farn.run.utils.threading.JobQueue.rst.txt  farn.run.utils.threading.Worker.rst.txt  farn.run.utils.threading.rst.txt  farn.sampling.discrete.DiscreteSampling.rst.txt  farn.sampling.discrete.rst.txt  farn.sampling.sampling.rst.txt  farn.utils.sub_process.rst.txt  farn.utils.threading.Worker.rst.txt
branch/main/: .buildinfo  CHANGELOG.html  CHANGELOG_dictIO.html  CHANGELOG_farn.html  CHANGELOG_ospx.html  LICENSE.html  README.html  README_dictIO.html  README_farn.html  README_ospx.html  STYLEGUIDE.html  api.html  changelogs.html  cli.__main__.html  cli.batchProcess.html  cli.dictParser.html  cli.dict_parser.html  cli.farn.html  cli.html  cli.importSystemStructure.html  cli.ospCaseBuilder.html  cli.sub.dictIO.html  cli.sub.farn.html  cli.sub.ospx.html  cli.watchCosim.html  dictIO.cppDict.html  dictIO.dictParser.html  dictIO.dictReader.html  dictIO.dictWriter.html  dictIO.formatter.html  dictIO.html  dictIO.parser.html  dictIO.utils.counter.html  dictIO.utils.html  dictIO.utils.logging.html  dictIO.utils.path.html  dictIO.utils.strings.html  farn.core.case.html  farn.core.html  farn.core.parameter.html  (+41 more)
branch/main/_autosummary/: dictIO.cpp_dict.CppDict.html  dictIO.cpp_dict.html  dictIO.dict.SDict.html  dictIO.dict.html  dictIO.dict_parser.DictParser.html  dictIO.dict_parser.html  dictIO.dict_reader.DictReader.html  dictIO.dict_reader.html  dictIO.dict_writer.DictWriter.html  dictIO.dict_writer.html  dictIO.formatter.html  (+92 more)
branch/release/: .buildinfo  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.batchProcess.html  cli.farn.html  cli.html  farn.farn.html  farn.html  farn.run.batchProcess.html  farn.run.html  farn.run.subProcess.html  farn.sampling.html  farn.sampling.sampling.html  fileFormat.farnDict.html  fileFormat.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/doxygen/: Doxyfile  Doxyfile.bak  customdoxygen.css  header.html
docs/source/: api.rst  cli.batchProcess.rst  cli.rst  conf.py  example.farnDict.md  examples.rst  farn.cli.rst  farn.core.case.rst  farn.core.rst  farn.rst  farn.run.cli.rst  farn.run.rst  farn.run.utils.rst  farn.sampling.rst  farn.utils.rst  farn_example.md  fileFormat.farnDict.md  fileFormats.rst  index.rst  modules.rst
src/farn/: __init__.py  farn.py
tests/: .gitignore  conftest.py  farnDict-exceptionlistfiltering  farnDict-initialfiltering  farnDict-nofiltering  test_always_distribute.py  test_cases.py  test_defaults.py  test_farn.py  test_farnDict  test_farnDict_1layer  test_farnDict_2layer  test_sampling.py
tests/cli/: test_farn_cli.py
tests/test_dicts/: .gitignore  test_farnDict  test_farnDict_always_distribute  test_farnDict_distribute  test_farnDict_exclude_filtering  test_farnDict_failed_filtering  test_farnDict_no_filtering  test_farnDict_normalLhs  test_farnDict_one_layer_filter_layer  test_farnDict_one_layer_filter_param  test_farnDict_sobolSequence  test_farnDict_two_layers_filter_layer  test_farnDict_two_layers_filter_param  test_farnDict_v4
tests/test_working_directory/: .gitignore  test_farnDict  test_farnDict_always_distribute  test_farnDict_exclude_filtering  test_farnDict_failed_filtering  test_farnDict_no_filtering  test_farnDict_normalLhs  test_farnDict_one_layer_filter_layer  test_farnDict_one_layer_filter_param  test_farnDict_sobolSequence  test_farnDict_two_layers_filter_layer  test_farnDict_two_layers_filter_param  test_farnDict_v4
(+83 files in other folders)
