[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/farn",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "manage.py",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/farn",
]

[project]
name = "farn"
version = "0.4.2"
description = "Python package to generate an n-dimensional case folder structure applying linear and spatial sampling strategies."
readme = "README.md"
requires-python = ">= 3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Frank Lumpitzsch", email = "frank.lumpitzsch@dnv.com" },
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
    { name = "Seunghyeon Yoo", email = "seunghyeon.yoo@dnv.com" },
]
maintainers = [
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
keywords = [
    "farn",
    "OSP",
    "fmi",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml>=6.0",
    "numpy>=2.3",
    "scipy>=1.17.0",
    "pandas>=3.0",
    "matplotlib>=3.10",
    "pillow>=12.1",
    "pyDOE3>=1.6.2",
    "psutil>=7.2",
    "hilbertcurve>=2.0",
    "dictIO>=0.4.3",
    "ospx>=0.3.2",
]

[project.urls]
Homepage = "https://github.com/dnv-opensource/farn"
Documentation = "https://dnv-opensource.github.io/farn/README.html"
Repository = "https://github.com/dnv-opensource/farn.git"
Issues = "https://github.com/dnv-opensource/farn/issues"
Changelog = "https://github.com/dnv-opensource/farn/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.14.3",
    "pyright>=1.1.407",
    "mypy>=1.19.1",
    "sourcery>=1.43.0",
    "pre-commit>=4.3",
    "Sphinx>=9.0",
    "sphinx-argparse-cli>=1.20.1",
    "sphinx-autodoc-typehints>=3.6",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=5.0",
    "furo>=2025.12",
    "nbconvert>=7.17",
    "jupyter>=1.1.1",
    "jupyter-client>=8.8",
    "pandas-stubs>=2.3",
    "types-psutil>=7.2",
    "types-lxml>=2026.1",
]

[tool.uv]
default-groups = [
    "dev",
]
native-tls = true
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]


[project.scripts]
farn = "farn.cli.__main__:main"
batchProcess = "farn.run.cli.batchProcess:main"


[tool.mypy]
plugins = []
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
