[metadata]
name = farn
version = 0.2.3
summary = n-dimensional case generator.
description = Python package to generate an n-dimensional case folder structure applying linear and spatial sampling strategies.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://dnv-opensource.github.io/farn/
project_urls =
    GitHub = https://github.com/dnv-opensource/farn
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Frank Lumpitzsch
author_email = "Frank Lumpitzsch" <frank.lumpitzsch@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    lxml>=4.9
    numpy>=1.23
    pandas>=1.5
    scipy>=1.9
    matplotlib>=3.6
    pyDOE2>=1.3
    Pillow>=9.3
    psutil>=5.9
    SALib>=1.4.6
    sobol-seq>=0.2
    dictIO>=0.2.2
    ospx>=0.2.4
    # dictIO @ file:../dictIO
    # ospx @ file:../ospx

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    farn = farn.cli.farn:main
    batchProcess = farn.run.cli.batchProcess:main

[flake8]
ignore = E116, E117, E123, E126, E226, E133, E251, E501, E701, W503
ignore-names = test_*, setUp, tearDown

[tool:pytest]
addopts = --strict-markers
xfail_strict = True
testpaths =
    tests

[coverage:run]
source = farn
branch = True

[coverage:report]
show_missing = True

[coverage:paths]
source =
    src/farn/
    .tox/py39/Lib/site-packages/farn/
    .tox/py310/Lib/site-packages/farn/

[tox:tox]
isolated_build = True
envlist =
    py39
    py310

[testenv]
deps =
    pytest>=6.2.5
    pytest-cov>=3.0.0
    pytest-randomly>=3.11.0
install_command = pip install {opts} {packages}
commands =
    pytest --cov-config setup.cfg --cov {posargs}