[metadata]
name = farn
version = 0.2.4
summary = n-dimensional case generator.
description = Python package to generate an n-dimensional case folder structure applying linear and spatial sampling strategies.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://dnv-opensource.github.io/farn/
project_urls =
    GitHub = https://github.com/dnv-opensource/farn
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Frank Lumpitzsch
author_email = "Frank Lumpitzsch" <frank.lumpitzsch@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    lxml>=4.9
    numpy>=1.23
    pandas>=1.5
    scipy>=1.9
    matplotlib>=3.6
    pyDOE2>=1.3
    Pillow>=9.3
    psutil>=5.9
    SALib>=1.4.6
    sobol-seq>=0.2
    dictIO>=0.2.4
    ospx>=0.2.5
    # dictIO @ file:../dictIO
    # ospx @ file:../ospx

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    farn = farn.cli.farn:main
    batchProcess = farn.run.cli.batchProcess:main

[flake8]
ignore = E501, W503
exclude =
    .git,
    .venv,
    .tox,
    build,
    dist,
    __pycache__,
    ./docs/source/conf.py
ignore-names = test_*, setUp, tearDown
max-line-length = 120

[tool:pytest]
testpaths = tests
addopts = --cov --cov-config setup.cfg --strict-markers
xfail_strict = True

[coverage:run]
source = farn
branch = True

[coverage:report]
fail_under = 10.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/farn
    */site-packages/farn

[tox:tox]
isolated_build = True
envlist = py{39,310,311}-{linux,macos,windows}
# envlist = py{39,310,311}-{windows}
# envlist = py{39,310,311}

[testenv]
deps =
    pytest>=7.2
    pytest-cov>=4.0
    pytest-randomly>=3.12
commands =
    pytest {posargs}
