[metadata]
name = farn
version = 0.3.4
summary = n-dimensional case generator.
description = Python package to generate an n-dimensional case folder structure applying linear and spatial sampling strategies.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://dnv-opensource.github.io/farn/README.html
project_urls =
    GitHub = https://github.com/dnv-opensource/farn
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Frank Lumpitzsch
author_email = "Frank Lumpitzsch" <frank.lumpitzsch@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    lxml>=4.9
    numpy>=1.26
    scipy>=1.11
    pandas>=2.1
    matplotlib>=3.8
    Pillow>=10.1
    pyDOE3>=1.0
    psutil>=5.9
    hilbertcurve>=2.0.5
    dictIO>=0.2.9
    ospx>=0.2.11
    # dictIO @ file:../dictIO
    # ospx @ file:../ospx

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    farn = farn.cli.farn:main
    batchProcess = farn.run.cli.batchProcess:main

[coverage:run]
source = farn
branch = True

[coverage:report]
fail_under = 10.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/farn
    */site-packages/farn

[tox:tox]
isolated_build = True
envlist = py{39,310,311,312}-{linux,macos,windows}
# envlist = py{39,310,311,312}-{windows}
# envlist = py{39,310,311,312}

[testenv]
system_site_packages = True
deps =
    pytest>=7.4
    pytest-cov>=4.1
commands =
    pytest --cov --cov-config setup.cfg {posargs}
